The JVM is three builtins short of the compiler, and running it found five bugs
From 89 missing builtins to 3. The mechanical bulk is in -- 18 type
predicates, 8 bit operations, 26 maths functions, the string operations and a
byte-string type. What is left is regex, which needs flint's Pike VM ported
rather than a host engine underneath it: `doc/decisions/0011` pins the
semantics to a defined subset every host honours, and a best-effort
translation is what it rules out.

Running the compiler found five bugs, and NOT ONE was a missing builtin. Every
one was a shape the conformance corpus never used:

Builtins threw a bare string. flint's runtime throws a structured error with a
kind, a message and data, so `ex-message` on one of mine answered nil -- and
the compiler, which catches an error and re-throws it with the form it
happened in, produced `"\n  in flint.main/-main"`. A real failure reported as
nothing, which is the worst combination. Errors are their own type now.

Sets, maps and vectors were not callable. `(#{\space \tab} c)` is how the
reader tests whitespace, so the compiler could not read its own source.

`transient` refused a set. `deref` refused a volatile, which the Rust runtime
accepts alongside an atom. And a vector holding `nil` could not be made
persistent: `List.copyOf` rejects nulls, and the guard I had written around it
returned the same list on both branches, so it guarded nothing -- a
NullPointerException four frames inside the JDK.

That is the argument for running the compiler rather than more test programs.
The corpus is a good gate; the compiler is a better one, because it is the only
flint program large enough to use the whole language.

It does not self-host yet: it stops at `unable to resolve symbol: string?`,
cause not found. The error's own `:ns` reads `flint.main`, which is not the
namespace being compiled, so the compiler's error context is stale too. Both
recorded as open rather than guessed at.

Co-Authored-By: Claude Opus 5 <norepl